Updates for 0.94.2, in progress.

--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-11-28
+% \update      2017-12-26
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -1158,6 +1158,18 @@
    For a couple of short, but good, video tutorials about using arming,
    queueing, and snapshots, see references \cite{wootangent1}
    and \cite{wootangent2}.
+
+   \index{solo!true}
+   \index{pattern!shift-left-click}
+   \index{patterns panel!inverse muting}
+   \index{patterns panel!solo}
+   \index{shift-left-click solo}
+   Also note that there is a more true "Solo" functionality in the Patterns
+   Panel and the Song Editor.  To truly "solo" a pattern, move the mouse cursor
+   over the pattern, hold the \texttt{Shift} key, and left-click the pattern.
+   This will turn off all the other patterns, so that the selected pattern ins
+   the only one playing.  Holding the \texttt{Shift} key and clicking the same
+   pattern again will unmute all of the other patterns.
 
 \paragraph{Pattern Clicks}
 \label{paragraph:seq64_patterns_pattern_Clicks}
