--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-09-30
+% \update      2017-12-26
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -365,19 +365,23 @@
    created in the current song.  Each pattern in this list has a track of
    pattern layouts associated with it in the piano roll section.
 
-   \index{patterns column!left click}
+   \index{patterns column!left-click}
+   \index{patterns column!ctrl-left-click}
    \index{song editor!muting}
    Left-clicking on the pattern name or the "M" button toggles the muting
    (arming) status of the track.
+   It does the same thing if the \texttt{Ctrl} key is held at the same time.
 
-   \index{patterns column!ctrl left click}
+   \index{pattern!shift-left-click}
    \index{song editor!inverse muting}
+   \index{song editor!solo}
+   \index{shift-left-click solo}
    Shift-left-clicking on the pattern name or the "M" button toggles the muting
    (arming) status of \textsl{all other tracks} except the track that was
    selected.  This action is useful for quickly listening to a single sequence
    in isoloation.
 
-   \index{patterns column!right click}
+   \index{patterns column!right-click}
    Right-clicking on the pattern name or the "M" button brings up the same
    pattern editing menu as discussed in
    \sectionref{subsubsec:seq64_patterns_pattern_filled}.
