Beefed up the discussion of rc files and midi-control.

--- a/tex/seq64_usr_file.tex
+++ b/tex/seq64_usr_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2018-01-03
+% \update      2018-01-05
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -16,6 +16,11 @@
 
 \section{Sequencer64 "usr" Configuration File}
 \label{sec:seq64_usr_file}
+
+   There are two \textsl{Sequencer64} configuration files:
+   \texttt{sequencer64.rc} and \texttt{sequencer64.usr}.
+   See \sectionref{sec:seq64_rc_file}; it describes the "rc" file.
+   They are bit different in how they are handled.
 
    The \textsl{Sequencer64} "usr" (or "user")
    configuration file provides a way to give more
@@ -351,7 +356,7 @@
    \centering 
    \includegraphics[scale=0.50]{user/seq64-input-R.png}
    \caption{Inputs View with -R (--hide-alsa-ports) Option}
-   \label{fig:seq64_input_r}
+   \label{fig:seq64_input_R}
 \end{figure}
 
    Although the "hide" ports option is specified above, this view is
