--- a/tex/seq64_rc_file.tex
+++ b/tex/seq64_rc_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-12-10
+% \update      2018-01-05
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -17,9 +17,15 @@
 \section{Sequencer64 "rc" Configuration File}
 \label{sec:seq64_rc_file}
 
+   There are two \textsl{Sequencer64} configuration files:
+   \texttt{sequencer64.rc} and \texttt{sequencer64.usr}.
+   See \sectionref{sec:seq64_usr_file}; it describes the "usr" file.
+   They are bit different in how they are handled.
+
    \index{sequencer64.rc}
    \index{[sequencer64.rc]}   % for convenience
-   The \textsl{Sequencer64} configuration file originally was \texttt{.seq24rc},
+   The \textsl{Sequencer64} configuration file originally was
+   named \texttt{.seq24rc},
    and it was stored in the user's \texttt{\$HOME} directory.
    This is the same name used by \textsl{Seq24}, so we created an new file
    to take its place, with a fall-back to the original file-name if the new
@@ -35,15 +41,15 @@
       /home/ahlstrom/.config/sequencer64/sequencer64.rc
    \end{verbatim}
 
-   It contains the the data for remote MIDI control, keyboard
-   control, MIDI clock, and a few other settings.
-   (See \sectionref{sec:seq64_usr_file} for some more settings.)
+   It contains the the data for remote MIDI control, computer keyboard
+   control, MIDI clock, JACK transport, and a few other settings.
 
-   \textsl{Sequencer64} will overwrite the \texttt{sequencer6.4rc} file upon
-   quitting.  One should therefore quit \textsl{Sequencer64} before doing
-   manual modifications to the \texttt{sequencer64.rc} file.
-
-   Note that there is an old, but complete, example of the \textsl{Seq24}
+   \textsl{Sequencer64} will overwrite the \texttt{sequencer6.rc} file upon
+   quitting.  One should therefore quit \textsl{Sequencer64} before making
+   manual modifications to the \texttt{sequencer64.rc} file.  Note that most of
+   its settings can be modified in the \textbf{Options} dialog
+   (see \sectionref{subsubsec:seq64_menu_file_options}).
+   There is an old, but complete, example of the \textsl{Seq24}
    "rc" file at \cite{seq24launchpadmapper}.  It includes a setup for the
    Novation Launchpad device.
 
@@ -59,7 +65,7 @@
    \index{[midi-control]}
    For each pattern, we can set up MIDI events to turn a 
    pattern on, off, or to toggle it.  This setup is in the 
-   MIDI Control section of \texttt{sequencer64.rc}, and begins with an
+   MIDI Control section of \texttt{sequencer64.rc}, and begins with the
    "INI-style" group marker \texttt{[midi-control]}.
 
    Each MIDI control line has the following format:
@@ -68,30 +74,34 @@
       74  [0 0 0 0 0 0]   [0 0 0 0 0 0]   [0 0 0 0 0 0]
    \end{verbatim}
 
+   The first number is an index number, starting at 0.
    The leftmost brackets define a \textsl{toggle} filter;
    the middle brackets define a \textsl{on} filter;
    the rightmost brackets define a \textsl{off} filter.
    The numbers inside the brackets define six values that set up the control:
    \textbf{on/off}; \textbf{inverse}; \textbf{MIDI status byte};
    \textbf{data1}; \textbf{data2 min}; and \textbf{data2 max}
-   This layout of values is explained in more detail below.
+   This layout of values is explained below.
 
    The MIDI control setup resembles a matrix.
-   The first block of matrix elements represents control for control
-   functions of the active screen-set.
-   These entries are numbered from 0 to 63.
-   Legacy control keys occupy entries from 64 to 73.
-   We've added some more entries, from 74 to 83, to control additional
-   \textsl{Sequencer64} functions.
+   The first block of matrix elements, the entries numbered from 0 to 63,
+   represent control for control functions (toggle, mute, unmute)
+   of the active screen-set.
+   Legacy control keys occupy the entries from 64 to 73.  These entries control
+   \textsl{Sequencer64} actions like changing the BPM value, screen-set, etc.
+   \textsl{Sequencer64} adds some more entries, from 74 to 83, to control
+   additional \textsl{Sequencer64} functions such as performance
+   record, solo, etc.
    
-   The MIDI Control section is explicitly broken into subsections, though those
+   The \texttt{[midi-control]}
+   section is explicitly broken into subsections, though those
    subsections are marked with comment-lines for better comprehensibility.  The
    subsections of the MIDI Control section are:
 
    \begin{enumber}
       \item \textbf{Pattern group}.
          \index{rc!pattern group}
-         Consists of 32 lines, one for each
+         Consists of 32 lines (0 to 31), one for each
          pattern box shown in the Pattern window.
          It provides a way to control the arming/disarming (muting/unmuting) of
          each pattern shown in the main window.  Note that the main window
@@ -99,7 +109,7 @@
          \textsl{active} screen-set.
       \item \textbf{Mute-in group}.
          \index{rc!mute-in group}
-         Consists of 32 lines, one for each
+         Consists of 32 lines (32 to 63), one for each
          pattern box shown in the Pattern window.
          It provides a way to control the mute groups.
          A group is a set of sequences that can arm their playing state
@@ -108,11 +118,12 @@
       \item \textbf{Automation group}.
          \index{rc!automation group}
          Each item in this group consists of one line.  Each line
-         specifies a MIDI event that can cause the given operation to occur.
-         Now, from our vantage point, the "up" versus "down" functions should
-         not need two entries to effect them... we should be able to use the
-         "on" control to perform "up", and the "off" control to perform "down".
-         But this is the legacy setup and we shall respect that.
+         specifies a MIDI event that can cause a given
+         \textsl{Sequencer64} user-interface operation to occur.
+%        Now, from our vantage point, the "up" versus "down" functions should
+%        not need two entries to effect them... we should be able to use the
+%        "on" control to perform "up", and the "off" control to perform "down".
+%        But this is the legacy setup and we shall respect that.
          \begin{enumber}
             \item \textbf{bpm up}.
                This MIDI control increments the beats-per-minute setting, as if
@@ -141,7 +152,7 @@
                that pattern is unmuted, and all the rest are muted.
                This works whether in "Live" or "Song" mode.
             \item \textbf{mod snapshot}.
-               This MIDI control causes the playing status of all active
+               This MIDI control causes the playing statuses of all active
                (i.e. having data) patterns to be saved.  When turned off, the
                original playing status is restored.  Thus, two MIDI events
                need to be allocated to this functionality. Compare
@@ -154,14 +165,15 @@
                pattern.
             \item \textbf{mod gmute}.
                This MIDI control sets up a "mute group".
-               More to come on this one.
+               More to come on this one,
+               see \sectionref{subsec:seq64_patterns_panel_top}.
             \item \textbf{mod glearn}.
                This MIDI control sets up a "group learn".
                However, as the group-learn key is a modifier key that needs to
                be held, we're not quite sure how this works with MIDI control.
             \item \textbf{screen-set play}.
                This MIDI control sets the playing screen-set, 
-               but we're not quite sure how it works yet.
+               but we're not completely sure how it works yet.
          \end{enumber}
       \item \textbf{Extended automation group}.
          \index{rc!extended automation}
@@ -174,7 +186,8 @@
                start.
             \item \textbf{record}.  For recording a live performance by
                recording the mute/unmute states that the musician played.
-               Not yet functional.
+               Not yet functional, thought the feature has been added as of
+               version 0.94.
             \item \textbf{solo on/off}.
                Not yet functional.
             \item \textbf{thru toggle}.
@@ -185,8 +198,8 @@
 
    For all of these MIDI control lines,
    the three fields, each between the brackets, on each line, correspond to a
-   \textsl{MIDI filter} to toggle, enable, or disable a sequence, change a
-   selection, or activate a feature.
+   \textsl{MIDI filter} to toggle, enable, or disable a sequence, or to
+   change a selection, or activate a feature.
    If the incoming MIDI event value matches a value present in the filter, it
    will \textsl{toggle} (first field), \textsl{enable} (second field) or
    \textsl{disable} (third field) the sequence.
@@ -210,7 +223,7 @@
    \index{rc!screen-set-play}
    \begin{verbatim}
       [midi-control]
-      74      # MIDI controls count
+      74      # MIDI controls count (84 in the latest Sequencer64)
 
       # pattern group
        0  [0 0 0 0 0 0]   [1 0 144  96 0 127]   [1 0 128  96 0 127]            
@@ -282,8 +295,7 @@
 
    Not all of these new values are yet usable.  Currently, just the
    "start", "pause", "stop", and "bpm" page controls have been implemented.
-
-   So let's concentrate on one line of data:
+   So let's focus again on one line of data, and describe it in greater detail:
 
    \begin{verbatim}
       74  [0 0 0 0 0 0]   [0 0 0 0 0 0]   [0 0 0 0 0 0]
@@ -346,11 +358,11 @@
    several sequences to a knob or fader.
 
    The \textbf{STAT (MIDI status byte)} field is a MIDI status byte number in
-   decimals.  The channel nybble of this byte is ignored.  One can look the
-   possible status values up in the MIDI messages tables; the relevant data can
-   be found at \cite{midicontroltable}.  As the channel on which the events are
-   sent is ignored, it is sufficient to use the values for channel 1.  That is,
-   0.
+   decimal notation.  The channel nybble of this byte is ignored.  One can look
+   up the possible status values up in the MIDI messages tables; the relevant
+   data can be found at \cite{midicontroltable}.  As the channel on which the
+   events are sent is ignored, it is sufficient to use the values for channel
+   1; that is, 0.
 
    The last three fields describe the range of data that will match.  The
    \textbf{D1 (data1)} field provides the actual MIDI event message number to
@@ -363,6 +375,25 @@
 
    The \textbf{D2max (data2 max)} field is the maximum value of the event for
    the filter to match.
+
+   As a quick example, let us set up a Note On event on channel 2 and key value
+   48 that will increment \textsl{Sequencer64}'s BPM value each time it is
+   pressed.  A Note On event is 0x90 hex, or 144 decimal.  Channel 2 is 0x1 hex
+   or 1 decimal.   Adding the Note On value to the the channel number yields
+   0x91 hex, or 145 decimal.  Then we pick a note value of 48, which is one of
+   the C keys.  We don't care about the velocity, so we allow all values (0 to
+   127).  We add the following entry to
+   \texttt{\textasciitilde/.config/sequencer64/sequencer64.rc}):
+
+   \begin{verbatim}
+      [midi-control]
+       . . .
+      # bpm up:
+      64 [0 0   0   0   0   0] [1 0 145  48   0 127] [0 0   0   0   0   0]
+   \end{verbatim}
+
+   Now, whenever we press that key, we see that the BPM value in the main
+   patterns panel increments by 1.
 
 \subsubsection{Sequencer64 "rc" File / MIDI Control Pattern Group}
 \label{subsubsec:seq64_rc_file_midi_control_pattern_group}
