--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -1418,8 +1418,9 @@
    \index{variset}
    This option, informally known as "variset", allow some changes in
    the set size and layout from the default 4x8 = 32 sets layout.
-   The row count can set from 4 to 8, and the column count can be set to 8 to
-   12.  Note that the set size can only be increased by these settings.
+   The row count can be set from 4 to 8, and the column count can be set to 8
+   to 12.  Note that the set size can only be \textsl{increased} by these
+   settings.
 
    \textbf{Warning:}
    \textsl{seq24} was fairly hardwired for supporting 32 patterns per
