Updates to fruity mode descriptions and some tweaks.

--- a/tex/seq64_event_editor.tex
+++ b/tex/seq64_event_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-01-02
-% \update      2017-08-01
+% \update      2018-01-15
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -60,7 +60,8 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{event-editor/preliminary-event-editor.png}
+%  \includegraphics[scale=0.75]{event-editor/preliminary-event-editor.png}
+   \includegraphics[scale=0.75]{new/event-editor-updated.png}
    \caption{Event Editor Window}
    \label{fig:event_editor_window}
 \end{figure}
