--- a/tex/seq64_kbd_mouse.tex
+++ b/tex/seq64_kbd_mouse.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-04-07
-% \update      2016-10-31
+% \update      2018-01-21
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -23,8 +23,9 @@
    described in the keyboard setup for the main window (where "live"
    performance is controlled;
    see \sectionref{paragraph:seq64_menu_file_options_keyboard}).
-   It also does not cover the "fruity" mouse actions.  Any volunteers to fill
-   in those tables?
+   It also does not cover the "fruity" mouse actions, though they are touched
+   on in \sectionref{paragraph:seq64_menu_file_options_mouse}.
+   Any volunteers to fill in the table?
 
    This section describes the keystrokes that are currently hardwired
    in \textsl{Sequencer64}.
