--- a/tex/seq64_rc_file.tex
+++ b/tex/seq64_rc_file.tex
@@ -392,7 +392,7 @@
       64 [0 0   0   0   0   0] [1 0 145  48   0 127] [0 0   0   0   0   0]
    \end{verbatim}
 
-   Now, whenever we press that key, we see that the BPM value in the main
+   Now, whenever we press key 48 (C), we see that the BPM value in the main
    patterns panel increments by 1.
 
 \subsubsection{Sequencer64 "rc" File / MIDI Control Pattern Group}
@@ -1119,9 +1119,6 @@
    \paragraphref{paragraph:seq64_menu_file_options_mouse}.
 
    \begin{verbatim}
-      # 0 - 'seq24' (original seq24 method)
-      # 1 - 'fruity' (similar to a certain fruity sequencer we like)
-
       [interaction-method]
 
       # 0 - 'seq24' (original seq24 method)
