Updates to kudos and usr file description.

--- a/tex/seq64_kudos.tex
+++ b/tex/seq64_kudos.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-08-29
-% \update      2017-11-05
+% \update      2018-01-24
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -18,7 +18,8 @@
 \label{sec:kudos}
 
    This section gives some credit where credit is due.
-   We have contributors to acknowledge:
+   We have contributors to acknowledge, and have not caught up with all the
+   people who have helped this project:
 
    \begin{itemize}
       \item \textsl{Tim Deagan (tdeagan)}:
@@ -67,6 +68,10 @@
          a request for an LV2 plugin version, a possible future feature.
       \item \textsl{triss}:
          a request for OSC support, a possible future feature.
+      \item \textsl{layk}:
+         some bug reports, and, we are pretty sure, some nice videos that
+         demonstrate \textsl{Sequencer64} on \textsl{YouTube}.  See
+         \cite{layk}.
          
    \end{itemize}
 
