--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -61,6 +61,15 @@
    \url{http://jackaudio.org/}.
    2015.
 
+   \bibitem{layk}
+   Lassi Ylikojola.
+   \emph{Many demo videos of Sequencer64}
+   \url{https://www.youtube.com/watch?v=YStYVjFv1TM},
+   \url{https://www.youtube.com/watch?v=GBlEP8Ffqss},
+   \url{https://www.youtube.com/watch?v=4gG8SvJxJkA&t=28s},
+   \url{https://www.youtube.com/watch?v=n4Z4WPK6FpA}.
+   2010-2017.
+
    \bibitem{linuxsynths}
    LinuxSynths team, briandc@linuxsynths.com.
    \emph{A Sonic Palette on the Linux Platform.}
