--- a/tex/seq64_rc_file.tex
+++ b/tex/seq64_rc_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2018-01-05
+% \update      2018-01-25
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -1054,8 +1054,19 @@
    \begin{verbatim}
       [midi-input]
       1   # number of MIDI busses
-      # [0] 14:0 2x2 A (SuperNova,Q,TX81Z,DrumStation)
+
+      # The first number is the port number, and the second number
+      # indicates whether it is disabled (0), or enabled (1).
+
+      # [0] 0:0 seq64 midi in
       0 0
+
+      # If set to 1, this option allows the master MIDI bus to record
+      # (filter) incoming MIDI data by channel, allocating each incoming
+      # MIDI event to the sequence that is set to that channel.
+      # This is an option adopted from the Seq32 project at GitHub.
+
+      0   # flag to record incoming data by channel
    \end{verbatim}
 
    There is no user-interface item for the following value, but
@@ -1064,8 +1075,11 @@
 
    \index{[manual-alsa-ports]}
    \begin{verbatim}
-      # set to 1 if you want seq24 to create its own alsa ports and
-      # not connect to other clients
+      # Set to 1 to have sequencer64 create its own ALSA ports and not
+      # connect to other clients.  Use 1 to expose all 16 MIDI ports to
+      # JACK (e.g. via a2jmidid).  Use 0 to access the ALSA MIDI ports
+      # already running on one's computer, or to use the autoconnect
+      # feature (Sequencer64 connects to existing JACK ports on startup.
 
       [manual-alsa-ports]
       1
